--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,10 @@ header {
   margin-bottom: 30px;
 }
 
+.index-h1-span {
+  display: block;
+}
+
 .button-order-service {
   background-color: var(--accent-color);
   border-radius: 4px;
