--- a/css/styles.css
+++ b/css/styles.css
@@ -364,29 +364,14 @@ header {
 }
 
 .checkbox-div {
-  position: relative;
   margin-left: 14px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 425px;
 }
 
-.checkbox-custom {
-  position: absolute;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--primary-text-color);
-  border-radius: 2px;
-  left: 0;
-  fill: #fff;
-  display: flex;
-  align-items: center;
-  /* background-size: contain; */
-  /* background-origin: border-box; */
-}
-
-.checkbox:checked + .checkbox-custom {
+.checkbox:checked + .checkbox-custom-svg {
   fill: var(--accent-color);
   background-color: var(--accent-color);
   border-color: var(--accent-color);
@@ -395,13 +380,18 @@ header {
   /* background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctitle%3Echeck16-15t%3C/title%3E%3Cpath fill='%23fff' d='M9.080 11.816l-0.105-0.101-0.105 0.099-1.469 1.393 0.116 0.111 5.434 5.183 0.105-0.101 11.554-11.022-0.116-0.11-1.45-1.383-0.105 0.101-9.989 9.521-3.87-3.692z'%3E%3C/path%3E%3C/svg%3E"); */
 }
 
-.checkbox:focus + .checkbox-custom {
+.checkbox:focus + .checkbox-custom-svg {
   border-color: var(--accent-color);
 }
 
 .checkbox-custom-svg {
   width: 16px;
   height: 15px;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 2px;
+  fill: #fff;
+  /* background-size: contain; */
+  /* background-origin: border-box; */
 }
 
 .checkbox-span {
