--- a/css/styles.css
+++ b/css/styles.css
@@ -58,10 +58,6 @@ body {
   color: var(--primary-text-color);
 }
 
-.logo-accent-color {
-  color: var(--accent-color);
-}
-
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -69,12 +65,12 @@ body {
 
 /* ----------------header---------------- */
 
-header {
+.header {
   border-bottom: 1px solid #ececec;
   padding: 25px 0;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -86,34 +82,45 @@ header {
   padding: 0 15px;
 }
 
-.logo {
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+
+.header__logo {
   font-family: 'Raleway', sans-serif;
   font-size: 26px;
   line-height: 1.19;
   font-weight: 700;
   letter-spacing: 0.03em;
-}
-
-.logo-header {
   color: #000;
-  margin-right: 93px;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-container {
+.header__logo:hover,
+.header__logo:focus {
+  color: var(--accent-color);
+}
+
+.header__logo--accent-color {
+  color: var(--accent-color);
+}
+
+.header__menu {
   display: flex;
-  align-items: center;
+  margin-left: 93px;
+  list-style: none;
 }
 
-.nav-menu {
-  display: flex;
-}
-
-.nav-menu .link.current {
+.header__current {
   color: var(--accent-color);
   position: relative;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current::after {
+.header__current::after {
   content: '';
   position: absolute;
   width: 100%;
@@ -124,22 +131,23 @@ header {
   border-radius: 2px;
 }
 
-.nav-menu-li:not(:last-child) {
+.header__current--inverse {
+  color: var(--primary-text-color);
+  position: static;
+}
+
+.header__li:not(:last-child) {
   margin-right: 50px;
 }
 
-.mail-tel {
+.header__mail-tel {
   display: flex;
   margin-left: auto;
   align-items: center;
+  list-style: none;
 }
 
-.mail-tel-li:not(:last-child) {
-  margin-right: 50px;
-}
-
-.mailto-a,
-.tel-a {
+.header__href {
   color: var(--secondary-text-color);
   text-decoration: none;
   display: flex;
@@ -147,21 +155,19 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mailto-a:hover,
-.mailto-a:focus,
-.tel-a:hover,
-.tel-a:focus {
+.header__href:hover,
+.header__href:focus {
   color: var(--accent-color);
 }
 
-.mailto-icon-svg {
+.header__icon {
   margin-right: 10px;
   width: 16px;
   height: 12px;
   fill: currentColor;
 }
 
-.tel-icon-svg {
+.header__icon--tel {
   margin-right: 10px;
   width: 12px;
   height: 16px;
@@ -777,7 +783,7 @@ img {
   margin-right: 70px;
 }
 
-.logo-footer {
+.header__logo--inverse {
   color: #fff;
 }
 
