--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ body {
 }
 
 .header__current {
-  color: var(--accent-color);
+  color: var(--primary-text-color);
   position: relative;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -125,15 +125,18 @@ body {
   position: absolute;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
   bottom: -27px;
   left: 0;
   border-radius: 2px;
+  background-color: transparent;
 }
 
-.header__current--inverse {
-  color: var(--primary-text-color);
-  position: static;
+.header__current--color {
+  color: var(--accent-color);
+}
+
+.header__current--color::after {
+  background-color: var(--accent-color);
 }
 
 .header__li:not(:last-child) {
@@ -176,7 +179,7 @@ body {
 
 /* ----------------main index.html---------------- */
 
-.bg-order-service {
+.order {
   max-width: 1600px;
   text-align: center;
   margin: 0 auto;
@@ -185,7 +188,7 @@ body {
   background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/index/bg.jpg);
 }
 
-.index-h1 {
+.order__h1 {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -196,11 +199,11 @@ body {
   margin-bottom: 30px;
 }
 
-.index-h1-span {
+.order__h1--span {
   display: block;
 }
 
-.button-order-service {
+.order__button {
   background-color: var(--accent-color);
   border-radius: 4px;
   color: #fff;
@@ -213,7 +216,7 @@ body {
   border: none;
 }
 
-.backdrop {
+.order__backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -226,13 +229,13 @@ body {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
+.order__backdrop--is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
 
-.modal {
+.order__modal {
   width: 528px;
   /* height: 581px; */
   background-color: #fff;
@@ -246,7 +249,7 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.data-modal-close {
+.order__close {
   position: absolute;
   top: 0;
   right: 0;
@@ -265,17 +268,17 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.data-modal-close:hover,
-.data-modal-close:focus {
+.order__close:hover,
+.order__close:focus {
   color: var(--accent-color);
 }
 
-.icon-close-svg {
+.order__close-svg {
   width: 11px;
   height: 11px;
 }
 
-.modal-p {
+.order__p {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -283,13 +286,13 @@ body {
   margin-bottom: 12px;
 }
 
-.form-signup {
+.order__form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.label {
+.order__label {
   display: block;
   text-align: left;
   font-size: 12px;
@@ -299,12 +302,13 @@ body {
   margin-bottom: 4px;
 }
 
-.input-pos-div {
+.order__input--position {
   position: relative;
   margin-bottom: 10px;
+  width: 100%;
 }
 
-.input {
+.order__input {
   display: block;
   width: 100%;
   height: 40px;
@@ -315,7 +319,7 @@ body {
   outline-width: 0;
 }
 
-.pos-svg {
+.order__svg {
   position: absolute;
   left: 14px;
   top: 50%;
@@ -325,26 +329,26 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.pos-svg.name {
+.order__svg--name {
   width: 12px;
   height: 12px;
 }
 
-.pos-svg.tel {
+.order__svg--tel {
   width: 13px;
   height: 13px;
 }
 
-.pos-svg.email {
+.order__svg--email {
   width: 15px;
   height: 12px;
 }
 
-.input:focus + .pos-svg {
+.order__input:focus + .order__svg {
   color: var(--accent-color);
 }
 
-.comment {
+.order__comment {
   display: block;
   width: 100%;
   height: 120px;
@@ -356,7 +360,7 @@ body {
   outline-width: 0;
 }
 
-.comment::placeholder {
+.order__comment::placeholder {
   padding: 12px 16px;
   font-size: 12px;
   line-height: 1.17;
@@ -364,12 +368,12 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.input:focus,
-.comment:focus {
+.order__input:focus,
+.order__comment:focus {
   border: 1px solid var(--accent-color);
 }
 
-.checkbox-div {
+.order__checkbox--position {
   margin-left: 14px;
   display: flex;
   align-items: center;
@@ -377,7 +381,7 @@ body {
   width: 425px;
 }
 
-.checkbox:checked + .checkbox-custom-svg {
+.order__checkbox:checked + .order__checkbox--custom {
   fill: var(--accent-color);
   background-color: var(--accent-color);
   border-color: var(--accent-color);
@@ -386,11 +390,11 @@ body {
   /* background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctitle%3Echeck16-15t%3C/title%3E%3Cpath fill='%23fff' d='M9.080 11.816l-0.105-0.101-0.105 0.099-1.469 1.393 0.116 0.111 5.434 5.183 0.105-0.101 11.554-11.022-0.116-0.11-1.45-1.383-0.105 0.101-9.989 9.521-3.87-3.692z'%3E%3C/path%3E%3C/svg%3E"); */
 }
 
-.checkbox:focus + .checkbox-custom-svg {
+.order__checkbox:focus + .order__checkbox--custom {
   border-color: var(--accent-color);
 }
 
-.checkbox-custom-svg {
+.order__checkbox--custom {
   width: 16px;
   height: 15px;
   border: 2px solid var(--primary-text-color);
@@ -400,19 +404,19 @@ body {
   /* background-origin: border-box; */
 }
 
-.checkbox-span {
+.order__span {
   /* margin-left: 7px; */
   font-size: 14px;
   line-height: 1.71;
   color: var(--secondary-text-color);
 }
 
-.checkbox-span-within {
+.order__span--color {
   text-decoration-line: underline;
   color: var(--accent-color);
 }
 
-.modal-submit {
+.order__submit {
   margin-top: 30px;
   width: 200px;
   height: 50px;
@@ -425,9 +429,10 @@ body {
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  align-self: center;
 }
 
-.modal-submit:hover {
+.order__submit:hover {
   background-color: #188ce8;
 }
 
