--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,15 @@ body {
   padding-bottom: 94px;
 }
 
+.section--padding {
+  padding-top: 94px;
+  padding-bottom: 0;
+}
+
+.section--color {
+  background-color: #f5f4fa;
+}
+
 /* ----------------header---------------- */
 
 .header {
@@ -436,23 +445,20 @@ body {
   background-color: #188ce8;
 }
 
-.no-padding-bottom {
-  padding-top: 94px;
-}
-
-.ul-our-features {
+.features__ul {
   display: flex;
+  list-style: none;
 }
 
-.li-our-features {
+.features__li {
   width: 270px;
 }
 
-.li-our-features:not(:last-child) {
+.features__li:not(:last-child) {
   margin-right: 30px;
 }
 
-.li-our-features-svg-div {
+.features__div {
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
@@ -462,25 +468,25 @@ body {
   margin-bottom: 30px;
 }
 
-.li-our-features-svg {
+.features__svg {
   width: 70px;
   height: 70px;
 }
 
-.index-h3-our-features {
+.features__h3 {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   font-weight: 700;
 }
 
-.index-p-our-features {
+.features__p {
   font-size: 14px;
   line-height: 1.71;
   color: #757575;
 }
 
-.index-h2-what-we-do {
+.we-do__h2 {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -488,15 +494,16 @@ body {
   margin-bottom: 50px;
 }
 
-.ul-what-we-do {
+.we-do__ul {
   display: flex;
+  list-style: none;
 }
 
-.li-what-we-do:not(:last-child) {
+.we-do__li:not(:last-child) {
   margin-right: 30px;
 }
 
-.we-do-div {
+.we-do__div {
   top: 0;
   left: 0;
   width: 100%;
@@ -505,7 +512,7 @@ body {
   z-index: -1;
 }
 
-.we-do-p {
+.we-do__p {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -522,11 +529,7 @@ body {
   align-items: center;
 }
 
-.bg-color-team {
-  background-color: #f5f4fa;
-}
-
-.index-h2-our-team {
+.team__h2 {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -534,26 +537,27 @@ body {
   margin-bottom: 50px;
 }
 
-.ul-team {
+.team__ul {
   display: flex;
+  list-style: none;
 }
 
-.li-team {
+.team__li {
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.li-team:not(:last-child) {
+.team__li:not(:last-child) {
   margin-right: 30px;
 }
 
-.index-h3-p-member-of-team-div {
+.team__div {
   padding: 30px 0;
 }
 
-.index-h3-member-of-team {
+.team__h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -561,7 +565,7 @@ body {
   margin-bottom: 10px;
 }
 
-.index-p-member-of-team {
+.team__p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -570,21 +574,22 @@ body {
   margin-bottom: 16px;
 }
 
-.index-member-of-team-ul-links {
+.team__cardset {
   display: flex;
   justify-content: center;
+  list-style: none;
 }
 
-.index-member-of-team-li-links {
+.team__item {
   width: 44px;
   height: 44px;
 }
 
-.index-member-of-team-li-links:not(:last-child) {
+.team__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.team-links {
+.team__link {
   display: flex;
   border-radius: 50%;
   justify-content: center;
@@ -596,14 +601,14 @@ body {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-links:hover,
-.team-links:focus {
+.team__link:hover,
+.team__link:focus {
   background-color: var(--accent-color);
   color: #fff;
   fill: currentColor;
 }
 
-.index-member-of-team-svg-links {
+.team__svg {
   width: 20px;
   height: 20px;
   fill: currentColor;
