--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body {
   align-items: center;
 }
 
-.header__logo {
+.logo {
   font-family: 'Raleway', sans-serif;
   font-size: 26px;
   line-height: 1.19;
@@ -107,12 +107,12 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__logo:hover,
-.header__logo:focus {
+.logo:hover,
+.logo:focus {
   color: var(--accent-color);
 }
 
-.header__logo--accent-color {
+.logo--accent-color {
   color: var(--accent-color);
 }
 
@@ -614,27 +614,28 @@ body {
   fill: currentColor;
 }
 
-.clients-h2 {
+.clients__h2 {
   font-size: 36px;
   line-height: 1.51;
   text-align: center;
   padding-bottom: 50px;
 }
 
-.clients-ul {
+.clients__ul {
   display: flex;
+  list-style: none;
 }
 
-.clients-li {
+.clients__li {
   width: 170px;
   height: 92px;
 }
 
-.clients-li:not(:last-child) {
+.clients__li:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-li-a {
+.clients__links {
   height: 100%;
   width: 100%;
   display: flex;
@@ -646,37 +647,39 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-li-a:hover,
-.clients-li-a:focus {
+.clients__links:hover,
+.clients__links:focus {
   border: 1px solid var(--accent-color);
   fill: var(--accent-color);
 }
 
-.clients-li-a-svg {
+.clients__svg {
   width: 106px;
   height: 60px;
 }
 
 /* ----------------portfolio.html---------------- */
 
-.ul-button {
+.buttons__ul {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  list-style: none;
 }
 
-.li-button:not(:last-child) {
+.buttons__li:not(:last-child) {
   margin-right: 8px;
 }
 
-.button:hover,
-.button:focus {
+.buttons:hover,
+.buttons:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: var(--accent-color);
   color: #fff;
 }
 
-.button {
+.buttons {
+  text-decoration: none;
   background-color: #f5f4fa;
   cursor: pointer;
   font-weight: 500;
@@ -693,39 +696,33 @@ body {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-ul {
+.portfolio__ul {
   display: flex;
   flex-wrap: wrap;
   margin-left: calc(-1 * var(--gap));
   margin-top: calc(-1 * var(--gap));
+  list-style: none;
 }
 
-.portfolio-ul > .portfolio-ul-li {
+.portfolio__ul > .portfolio__li {
   flex-basis: calc(100% / 3 - var(--gap));
   margin-left: var(--gap);
   margin-top: var(--gap);
   overflow: hidden;
 }
 
-.portfolio-a:hover,
-.portfolio-a:focus {
+.portfolio__links:hover,
+.portfolio__links:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.portfolio-a {
+.portfolio__links {
   display: block;
   position: relative;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  opacity: 1;
-}
-
-.portfolio-img-div {
+.portfolio__div {
   position: absolute;
   top: 0;
   left: 0;
@@ -738,19 +735,19 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-a:hover .portfolio-img-div,
-.portfolio-a:focus .portfolio-img-div {
+.portfolio__links:hover .portfolio__div,
+.portfolio__links:focus .portfolio__div {
   transform: translateY(0);
 }
 
-.portfolio-img-div-p {
+.portfolio__text {
   padding: 63px 24px;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
 }
 
-.portfolio-h3-p {
+.portfolio__wrapper {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -759,7 +756,7 @@ img {
   background-color: #fff;
 }
 
-.portfolio-h3 {
+.portfolio__h3 {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -767,7 +764,7 @@ img {
   color: var(--primary-text-color);
 }
 
-.portfolio-p {
+.portfolio__p {
   font-size: 16px;
   line-height: 1.88;
   color: #757575;
@@ -775,12 +772,12 @@ img {
 
 /* ----------------footer---------------- */
 
-.footer-wrapper {
+.footer__wrapper {
   background-color: #2f303a;
   padding: 60px 0;
 }
 
-.container-footer {
+.footer__container {
   display: flex;
   align-items: baseline;
   width: 1200px;
@@ -789,15 +786,15 @@ img {
   padding-right: 15px;
 }
 
-.footer-logo-address-container {
+.footer__logo {
   margin-right: 70px;
 }
 
-.header__logo--inverse {
+.logo--inverse {
   color: #fff;
 }
 
-.footer-address {
+.footer__address {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -805,23 +802,24 @@ img {
   margin-top: 20px;
 }
 
-.footer-address-p {
+.footer__p {
   margin-bottom: 9px;
 }
 
-.footer-address-li:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-link {
+.footer__href {
   color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
 }
 
-.footer-wrapper-join {
+.footer__join {
   margin-right: 93px;
 }
 
-.footer-p-join {
+.footer__invite {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -830,20 +828,21 @@ img {
   margin-bottom: 20px;
 }
 
-.footer-ul-join {
+.footer__catalogue {
   display: flex;
+  list-style: none;
 }
 
-.footer-li-join {
+.footer__unit {
   width: 44px;
   height: 44px;
 }
 
-.footer-li-join:not(:last-child) {
+.footer__unit:not(:last-child) {
   margin-right: 10px;
 }
 
-.footer-a-join {
+.footer__link {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.1);
@@ -854,22 +853,22 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-a-join:hover,
-.footer-a-join:focus {
+.footer__link:hover,
+.footer__link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-a-join-svg {
+.footer__svg {
   width: 20px;
   height: 20px;
   fill: #fff;
 }
 
-.footer-submit-div {
+.footer__inner {
   width: 570px;
 }
 
-.footer-submit-p {
+.footer__passage {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -878,12 +877,12 @@ img {
   margin-bottom: 20px;
 }
 
-.footer-input-button-div {
+.footer__inside {
   display: flex;
   justify-content: space-between;
 }
 
-.footer-input {
+.footer__input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -895,7 +894,7 @@ img {
   align-items: center;
 }
 
-.footer-input::placeholder {
+.footer__input::placeholder {
   /* padding: 15px 295px 15px 16px; */
   padding-left: 16px;
   font-size: 16px;
@@ -903,7 +902,7 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-submit-button {
+.footer__button {
   width: 200px;
   height: 50px;
   border-radius: 4px;
@@ -912,7 +911,7 @@ img {
   align-items: center;
 }
 
-.footer-submit-button-span {
+.footer__submit {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -921,7 +920,7 @@ img {
   margin-left: 29px;
 }
 
-.footer-submit-svg {
+.footer__icon {
   background-color: var(--accent-color);
   width: 24px;
   height: 24px;
