--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,9 +1,9 @@
 .header {
   border-bottom: 1px solid #ececec;
   padding: 25px 0;
-}
 
-.header__container {
+
+&__container {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -15,25 +15,25 @@
   padding: 0 15px;
 }
 
-.header__nav {
+&__nav {
   display: flex;
   align-items: center;
 }
 
-.header__menu {
+&__menu {
   display: flex;
   margin-left: 93px;
   list-style: none;
 }
 
-.header__current {
+&__current {
   color: var(--primary-text-color);
   position: relative;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.header__current::after {
+
+&::after {
   content: '';
   position: absolute;
   width: 100%;
@@ -44,48 +44,50 @@
   background-color: transparent;
 }
 
-.header__current--color {
+&--color {
   color: var(--accent-color);
 }
 
-.header__current--color::after {
+&--color::after {
   background-color: var(--accent-color);
 }
+      }
 
-.header__li:not(:last-child) {
+&__li:not(:last-child) {
   margin-right: 50px;
 }
 
-.header__mail-tel {
+&__mail-tel {
   display: flex;
   margin-left: auto;
   align-items: center;
   list-style: none;
 }
 
-.header__href {
+&__href {
   color: var(--secondary-text-color);
   text-decoration: none;
   display: flex;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.header__href:hover,
-.header__href:focus {
+&:hover,
+&:focus {
   color: var(--accent-color);
 }
+        }
 
-.header__icon {
+&__icon {
   margin-right: 10px;
   width: 16px;
   height: 12px;
   fill: currentColor;
 }
 
-.header__icon--tel {
+&__icon--tel {
   margin-right: 10px;
   width: 12px;
   height: 16px;
   fill: currentColor;
 }
+      }
