--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -5,9 +5,8 @@
   padding: 200px 0;
   height: 600px;
   background-image: linear-gradient(to right, #2f303a66, #2f303a66), url(../images/index/bg.jpg);
-}
 
-.order__h1 {
+&__h1 {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -18,11 +17,11 @@
   margin-bottom: 30px;
 }
 
-.order__h1--span {
+&__h1--span {
   display: block;
 }
 
-.order__button {
+&__button {
   background-color: var(--accent-color);
   border-radius: 4px;
   color: #fff;
@@ -35,7 +34,7 @@
   border: none;
 }
 
-.order__backdrop {
+&__backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -46,15 +45,15 @@
   visibility: visible;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.order__backdrop--is-hidden {
+&--is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
+              }
 
-.order__modal {
+&__modal {
   width: 528px;
   /* height: 581px; */
   background-color: #fff;
@@ -68,7 +67,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.order__close {
+&__close {
   position: absolute;
   top: 0;
   right: 0;
@@ -87,17 +86,17 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.order__close:hover,
-.order__close:focus {
+&__close:hover,
+&__close:focus {
   color: var(--accent-color);
 }
 
-.order__close-svg {
+&__close-svg {
   width: 11px;
   height: 11px;
 }
 
-.order__p {
+&__p {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -105,13 +104,13 @@
   margin-bottom: 12px;
 }
 
-.order__form {
+&__form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.order__label {
+&__label {
   display: block;
   text-align: left;
   font-size: 12px;
@@ -121,13 +120,13 @@
   margin-bottom: 4px;
 }
 
-.order__input--position {
+&__input--position {
   position: relative;
   margin-bottom: 10px;
   width: 100%;
 }
 
-.order__input {
+&__input {
   display: block;
   width: 100%;
   height: 40px;
@@ -138,7 +137,7 @@
   outline-width: 0;
 }
 
-.order__svg {
+&__svg {
   position: absolute;
   left: 14px;
   top: 50%;
@@ -146,28 +145,29 @@
   color: var(--primary-text-color);
   fill: currentColor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.order__svg--name {
+
+&--name {
   width: 12px;
   height: 12px;
 }
 
-.order__svg--tel {
+&--tel {
   width: 13px;
   height: 13px;
 }
 
-.order__svg--email {
+&--email {
   width: 15px;
   height: 12px;
 }
+          }
 
-.order__input:focus + .order__svg {
+&__input:focus + .order__svg {
   color: var(--accent-color);
 }
 
-.order__comment {
+&__comment {
   display: block;
   width: 100%;
   height: 120px;
@@ -179,7 +179,7 @@
   outline-width: 0;
 }
 
-.order__comment::placeholder {
+&__comment::placeholder {
   padding: 12px 16px;
   font-size: 12px;
   line-height: 1.17;
@@ -187,12 +187,12 @@
   color: rgba(117, 117, 117, 0.5);
 }
 
-.order__input:focus,
-.order__comment:focus {
+&__input:focus,
+&__comment:focus {
   border: 1px solid var(--accent-color);
 }
 
-.order__checkbox--position {
+&__checkbox--position {
   margin-left: 14px;
   display: flex;
   align-items: center;
@@ -200,7 +200,7 @@
   width: 425px;
 }
 
-.order__checkbox:checked + .order__checkbox--custom {
+&__checkbox:checked + &__checkbox--custom {
   fill: var(--accent-color);
   background-color: var(--accent-color);
   border-color: var(--accent-color);
@@ -209,11 +209,11 @@
   /* background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Ctitle%3Echeck16-15t%3C/title%3E%3Cpath fill='%23fff' d='M9.080 11.816l-0.105-0.101-0.105 0.099-1.469 1.393 0.116 0.111 5.434 5.183 0.105-0.101 11.554-11.022-0.116-0.11-1.45-1.383-0.105 0.101-9.989 9.521-3.87-3.692z'%3E%3C/path%3E%3C/svg%3E"); */
 }
 
-.order__checkbox:focus + .order__checkbox--custom {
+&__checkbox:focus + &__checkbox--custom {
   border-color: var(--accent-color);
 }
 
-.order__checkbox--custom {
+&__checkbox--custom {
   width: 16px;
   height: 15px;
   border: 2px solid var(--primary-text-color);
@@ -223,19 +223,19 @@
   /* background-origin: border-box; */
 }
 
-.order__span {
+&__span {
   /* margin-left: 7px; */
   font-size: 14px;
   line-height: 1.71;
   color: var(--secondary-text-color);
 }
 
-.order__span--color {
+&__span--color {
   text-decoration-line: underline;
   color: var(--accent-color);
 }
 
-.order__submit {
+&__submit {
   margin-top: 30px;
   width: 200px;
   height: 50px;
@@ -251,6 +251,7 @@
   align-self: center;
 }
 
-.order__submit:hover {
+&__submit:hover {
   background-color: #188ce8;
 }
+            }
